fix building and running tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,21 @@
             "label": "build tests",
             "type": "shell",
             "linux": {
-                "command": "./build.sh"
+                "command": "utils/build.sh && utils/runUnitTests.sh"
             },
             "group": {
                 "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "run unit tests",
+            "type": "shell",
+            "linux": {
+                "command": "utils/runUnitTests.sh"
+            },
+            "group": {
+                "kind": "test",
                 "isDefault": true
             }
         }
