--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,16 @@
 cmake_minimum_required(VERSION 3.5)
+
 project(fibutils)
 
 set(CMAKE_CXX_STANDARD 17)
 
-ADD_LIBRARY(fibutils STATIC
-    prettyTable.cpp
-    uptime.cpp
+ADD_LIBRARY(${PROJECT_NAME} STATIC
+    src/prettyTable.cpp
+    src/uptime.cpp
 )
 
-target_compile_options(fibutils PRIVATE -ggdb)
+target_include_directories(${PROJECT_NAME} PRIVATE 
+    ${CMAKE_SOURCE_DIR}/include
+)
 
-ADD_EXECUTABLE(tests tests.cpp)
-TARGET_LINK_LIBRARIES(tests fibutils)
+add_subdirectory(tests)
