--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ ADD_EXECUTABLE(${PROJECT_NAME}
     main.cpp
     configTemplateTests.cpp
     prettyTableTests.cpp
+    uptimeTests.cpp
 )
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} fibstd)
